Update payment display: Change static BTC amount to dynamic user activation amount in bitcoin_payment.html, and add login link to home.html for improved user navigation. Update binary cache files.

--- a/templates/app/bitcoin_payment.html
+++ b/templates/app/bitcoin_payment.html
@@ -43,8 +43,7 @@
                 <div class="payment-amount">
                     <label class="form-label">Amount to Send:</label>
                     <div class="amount-display">
-                        <span class="amount-value">0.001 BTC</span>
-                        <span class="amount-usd">≈ $50.00 USD</span>
+                        <span class="amount-value">${{ user.activation_amount|floatformat:2 }} USD</span>
                     </div>
                 </div>
                 
